@@ -5,23 +5,23 @@
     [
       0,
       0,
-      '375',
-      '451.39'
+      '454.86',
+      '452.78'
     ]
   ],
   [
     'createOval',
     '150',
-    '301.39',
+    '302.08',
     '225',
-    '351.39',
+    '352.08',
     '-fill',
     'lightgrey'
   ],
   [
     'createText',
     '187.5',
-    '326.39',
+    '327.08',
     '-text',
     '',
     '-tag',
@@ -31,24 +31,24 @@
     ]
   ],
   [
-    'createOval',
-    '250',
-    '301.39',
-    '325',
-    '351.39',
+    'createRectangle',
+    '250.695',
+    '301.3855',
+    '454.865',
+    '352.7745',
     '-fill',
-    'lightgrey'
+    '#dddddd'
   ],
   [
     'createText',
-    '287.5',
-    '326.39',
+    '352.78',
+    '327.08',
     '-text',
-    '',
+    'echo hallo perl\\lib double\\\\l',
     '-tag',
     [
       'rule',
-      'rule_'
+      'rule_echo hallo perl\\lib double\\\\l'
     ]
   ],
   [
@@ -95,17 +95,17 @@
   ],
   [
     'createRectangle',
-    '200',
-    '401.39',
-    '275',
-    '451.39',
+    '231.94',
+    '402.78',
+    '306.94',
+    '452.78',
     '-fill',
     '#ffff99'
   ],
   [
     'createText',
-    '237.5',
-    '426.39',
+    '269.44',
+    '427.78',
     '-text',
     'all',
     '-tag',
@@ -116,16 +116,16 @@
   ],
   [
     'createRectangle',
-    '250',
+    '315.28',
     '201.39',
-    '325',
+    '390.28',
     '251.39',
     '-fill',
     '#ffff99'
   ],
   [
     'createText',
-    '287.5',
+    '352.78',
     '226.39',
     '-text',
     'bar',
@@ -243,13 +243,13 @@
   [
     'createLine',
     '187.5',
-    '300.97',
+    '301.99',
     '187.5',
-    '285.9',
+    '286.82',
     '187.5',
-    '266.55',
+    '267.2',
     '187.5',
-    '251.53',
+    '251.94',
     '-arrow',
     'last',
     '-smooth',
@@ -257,14 +257,14 @@
   ],
   [
     'createLine',
-    '287.5',
-    '300.97',
-    '287.5',
-    '285.9',
-    '287.5',
-    '266.55',
-    '287.5',
-    '251.53',
+    '352.78',
+    '301.99',
+    '352.78',
+    '286.82',
+    '352.78',
+    '267.2',
+    '352.78',
+    '251.94',
     '-arrow',
     'last',
     '-smooth',
@@ -332,14 +332,14 @@
   ],
   [
     'createLine',
-    '225.14',
-    '400.97',
-    '216.35',
-    '383.87',
-    '204.73',
-    '361.28',
-    '196.74',
-    '345.74',
+    '249.61',
+    '402.69',
+    '234.26',
+    '384.35',
+    '213.47',
+    '359.5',
+    '200.26',
+    '343.72',
     '-arrow',
     'last',
     '-smooth',
@@ -347,14 +347,14 @@
   ],
   [
     'createLine',
-    '249.86',
-    '400.97',
-    '258.65',
-    '383.87',
-    '270.27',
-    '361.28',
-    '278.26',
-    '345.74',
+    '289.62',
+    '402.69',
+    '302.53',
+    '387.52',
+    '319.23',
+    '367.89',
+    '332.21',
+    '352.64',
     '-arrow',
     'last',
     '-smooth',
