@@ -6,6 +6,7 @@
 - add nodes for recipes too
 - change from GraphViz to GraphViz2 (min Perl now 5.010)
 - drop "reversed" mode - just give GraphViz option to reverse arrows
+- show recursive makes
 
 1.18
 	- stable release with changes in 1.17_50 .. 1.17_51
